# BinarizeByBackGroundParallel

./: CMakeLists.txt
src/: cuda_code.cu  cuda_code.h  main.cc
